# AACP-protocol

./: .gitignore  BENCHMARK_REPORT.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATASET_CARD.md  DESIGN_REQUIREMENTS.md  EVALUATION_PLAN.md  EVALUATION_REPORT_v011.md  GOVERNANCE_RELEASE_GATE.md  LICENSE  NOTICE  OPEN_SOURCE_RELEASE_CHECKLIST.md  README.md  RESPONSIBLE_USE.md  ROADMAP.md  SECURITY.md  SECURITY_CONTROL_MATRIX.md  TEST_RESULTS.txt  THREAT_MODEL.md  VERSION  __init__.py  audit.py  bug_report.yml  conftest.py  context_segment.schema.json  context_segment_provenance_receipt.json  detector.py  detector_result.schema.json  gateway.py  llm_detector.py  manifest.json  output_policy.json  output_policy.schema.json  policy.py  promptfooconfig.yaml  provenance.py  pyproject.toml  pytest.ini  test.yml  (+3 more)
.github/workflows/: bounded-agent-validation.yml  tests.yml
aacp_protocol/: __init__.py  detector.py  gateway.py  llm_detector.py  provenance.py  types.py
aacp_protocol/adapters/: README.md  __init__.py  autogen_adapter.py  crewai_adapter.py  langchain_adapter.py  mcp_adapter.py  semantic_kernel_adapter.py
aacp_protocol/tests/: conftest.py  test_agentic_injection_corpus.py  test_detector_gap_regressions.py  test_detector_regression_repair.py  test_llm_detector.py  test_owasp_llm01_corpus.py  test_provenance.py
adapters/: README.md  autogen_adapter.py  crewai_adapter.py  langchain_adapter.py  semantic_kernel_adapter.py
benchmarks/: README.md  bounded_agent_config.example.json  measure_bounded_agent.py  test_measure_bounded_agent.py
config/: audit_log.schema.json  policy_config.json
papers/: bounded-agent-paper.md
research/: AACP_OVERVIEW.md  CMPT_OVERVIEW.md  SMARTWEIGHTS_OVERVIEW.md
tests/: test_ablation.py  test_agentic_injection_corpus.py  test_authority_boundaries.py  test_e2e_pipeline.py  test_large_attack_corpus.py  test_large_benign_corpus.py  test_latency.py  test_llm_detector.py  test_memory_poisoning.py  test_multilingual.py  test_owasp_llm01_corpus.py  test_provenance.py  test_rag_injection.py  test_redteam_v011.py  test_threshold_sweep.py  test_tool_poisoning.py
